fix(material-experimental/theming): Update color palettes
Changes the way M3 color palettes a bit to make the color choices more
in line with what the spec expects. In particular, select the secondary
palette automatically based on the primary palette (secondary is
intended to be a more muted version of primary). We still allow the user
to select what tertiary color to pair with their primary, since the spec
doesn't make the same sort of assumptions about the tertiary color.

Note: because our demo targets styles at the .mat-primary, .mat-accent,
.mat-error classes, it winds up overriding the default color combo that
users would see out of the box for the mat-select (a primary form-field
with a secondary selected option). This is one example where the M2
color="primary/accent/warn" API doesn't quite align with how colors work
in M3. We do not expect users to apply colors in this way, and we
probably shouldn't do it in our demo either. For now I've added an extra
checkbox to the select demo that lets us observe the form-field/select
combo users would see out of the box without our overrides.

--- a/src/dev-app/theme-m3.scss
+++ b/src/dev-app/theme-m3.scss
@@ -82,10 +82,10 @@
   }
 
   .mat-accent {
-    @include color-variant-styles($theme, secondary);
+    @include color-variant-styles($theme, tertiary);
   }
   .mat-badge-accent {
-    @include mat.badge-color($theme, $color-variant: secondary);
+    @include mat.badge-color($theme, $color-variant: tertiary);
   }
 
   .mat-warn {
@@ -119,8 +119,7 @@ dev-app {
 $m3-base-config: (
   color: (
     primary: matx.$m3-green-palette,
-    secondary: matx.$m3-blue-palette,
-    tertiary: matx.$m3-yellow-palette,
+    tertiary: matx.$m3-violet-palette,
   ),
 );
 
@@ -173,6 +172,10 @@ html {
 
 @include color-variants-back-compat($light-theme);
 
+.demo-force-secondary {
+  @include mat.option-color($light-theme, $color-variant: secondary);
+}
+
 // Emit dark theme styles.
 .demo-unicorn-dark-theme {
   // TODO(mmalerba): choose colors from the theming API.
@@ -218,6 +221,10 @@ html {
   @include mat.tree-color($dark-theme);
 
   @include color-variants-back-compat($dark-theme);
+
+  .demo-force-secondary {
+    @include mat.option-color($dark-theme, $color-variant: secondary);
+  }
 }
 
 // Emit density styles for each scale.
