--- a/src/material-experimental/theming/_m3-tokens.scss
+++ b/src/material-experimental/theming/_m3-tokens.scss
@@ -114,11 +114,11 @@
 /// @param {Map} $tertiary The tertiary palette
 /// @param {Map} $error The error palette
 /// @return {Map} A set of `md-ref-palette` tokens
-@function _generate-ref-palette-tokens($primary, $secondary, $tertiary, $error) {
+@function _generate-ref-palette-tokens($primary, $tertiary, $error) {
   @return mat.private-merge-all(
       (black: #000, white: #fff),
       _generate-palette-tokens($primary, primary),
-      _generate-palette-tokens($secondary, secondary),
+      _generate-palette-tokens(map.get($primary, secondary), secondary),
       _generate-palette-tokens($tertiary, tertiary),
       _generate-palette-tokens(map.get($primary, neutral), neutral),
       _generate-palette-tokens(map.get($primary, neutral-variant), neutral-variant),
@@ -904,13 +904,12 @@
 /// Generates a set of namespaced color tokens for all components.
 /// @param {String} $type The type of theme system (light or dark)
 /// @param {Map} $primary The primary palette
-/// @param {Map} $secondary The secondary palette
 /// @param {Map} $tertiary The tertiary palette
 /// @param {Map} $error The error palette
 /// @return {Map} A map of namespaced color tokens
-@function generate-color-tokens($type, $primary, $secondary, $tertiary, $error) {
+@function generate-color-tokens($type, $primary, $tertiary, $error) {
   $ref: (
-    md-ref-palette: _generate-ref-palette-tokens($primary, $secondary, $tertiary, $error)
+    md-ref-palette: _generate-ref-palette-tokens($primary, $tertiary, $error)
   );
   $sys-color: if($type == dark,
     mdc-tokens.md-sys-color-values-dark($ref),
